# kero-variant-utils

./: .gitignore  CMakeLists.txt  README.md  cspell.json
.devcontainer/: Dockerfile  post_create.sh
cmake/: Config.cmake.in  KeroVariantUtilsConfig.cmake.in  kero_variant_utilsConfig.cmake.in
examples/: CMakeLists.txt  example.cc
kero_variant_utils/: kero_variant_utils.h
src/kero_variant_utils/: kero_variant_utils.h  kero_variant_utils_test.cc
tests/: variant_utils_test.cc
